@@ -141,6 +141,26 @@ void native_object_base::load_into(object const &o) {
   }
 }
 
+bool native_object_base::is_object_native(object const &o_) {
+  object o = o_;
+
+  if (o.is_null())
+    return false;
+
+  JSContext *ctx = Impl::current_context();
+  JSObject *jso = Impl::get_object(o);
+  JSClass *classp = JS_GET_CLASS(ctx, jso);
+
+  if (!classp || classp->finalize != &native_object_base::impl::finalize)
+    return false;
+
+  void *priv = JS_GetPrivate(ctx, jso);
+  if (!priv)
+    return false;
+
+  return true;
+}
+
 native_object_base &native_object_base::get_native(object const &o_) {
   object o = o_;
 
